Quorum3/Library/Tests/TypeCheckerGenerated/Pass/RetAssignObjectUndefinedField.quorum
class Main
    Object v = Test()
    action Main
        if v = undefined
            output "passed"
        end
    end

    action Test() returns Object
        return undefined
    end
end