Quorum3/Library/Tests/TypeCheckerGenerated/Fail/RetAssignIntObjObject.quorum
class Main
    action Main
        Integer v = Test()
    end

    action Test() returns Integer
        Object var
        return var
    end
end